tests/baselines/reference/project/mapRootAbsolutePathMultifolderNoOutdir/node/mapRootAbsolutePathMultifolderNoOutdir.errors.txt
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ref/m1.ts(3,12): error TS2564: Property 'm1_c1_p1' has no initializer and is not definitely assigned in the constructor.
test.ts(5,12): error TS2564: Property 'p1' has no initializer and is not definitely assigned in the constructor.
../outputdir_multifolder_ref/m2.ts(3,12): error TS2564: Property 'm2_c1_p1' has no initializer and is not definitely assigned in the constructor.


!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ref/m1.ts (1 errors) ====
    var m1_a1 = 10;
    class m1_c1 {
        public m1_c1_p1: number;
               ~~~~~~~~
!!! error TS2564: Property 'm1_c1_p1' has no initializer and is not definitely assigned in the constructor.
    }
    
    var m1_instance1 = new m1_c1();
    function m1_f1() {
        return m1_instance1;
    }
==== ../outputdir_multifolder_ref/m2.ts (1 errors) ====
    var m2_a1 = 10;
    class m2_c1 {
        public m2_c1_p1: number;
               ~~~~~~~~
!!! error TS2564: Property 'm2_c1_p1' has no initializer and is not definitely assigned in the constructor.
    }
    
    var m2_instance1 = new m2_c1();
    function m2_f1() {
        return m2_instance1;
    }
==== test.ts (1 errors) ====
    /// <reference path='ref/m1.ts'/>
    /// <reference path='../outputdir_multifolder_ref/m2.ts'/>
    var a1 = 10;
    class c1 {
        public p1: number;
               ~~
!!! error TS2564: Property 'p1' has no initializer and is not definitely assigned in the constructor.
    }
    
    var instance1 = new c1();
    function f1() {
        return instance1;
    }